# mlops

./: test.py
mnist_cnn/: .gitignore  README.md  pyproject.toml  tasks.py
mnist_cnn/dockerfiles/: api.dockerfile  train.dockerfile
mnist_cnn/docs/: mkdocs.yaml
mnist_cnn/docs/source/: index.md
mnist_cnn/models/: model.pth
mnist_cnn/src/mnist_cnn_proj/: evaluate.py  train.py  visualize.py
mnist_cnn/tests/: test_data.py
